overlapping of big paragraphs problem solved

--- a/Country/Main_stylesheet.css
+++ b/Country/Main_stylesheet.css
@@ -110,42 +110,44 @@ body {
     /* Semi-transparent background */
     margin-top: 40px;
     gap: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
 }
 
 .description {
     display: flex;
     align-items: center;
-    flex-direction: row-reverse;
+    justify-content: space-between;
     text-align: left;
     margin-bottom: 20px;
     gap: 20px;
+    flex-wrap: wrap; 
 }
+
 
 .description:nth-child(2n) {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+    flex-direction: row-reverse;
     text-align: right;
-   
+    align-items: center;
 }
+   
+
 
 .img_info {
-    flex: 1;
-    margin-right: 20px;
-
+    flex: 1 1 45%; 
+    min-width: 300px;
 }
-
 .content {
-    flex: 2;
+    flex: 1 1 50%; 
+    min-width: 300px; 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh;
     opacity: 0;
     transform: translateX(0);
     transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-
 }
 
 
